--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,16 @@ jobs:
       uses: actions/checkout@v3
       with:
        path: main
+    - name: copy file via ssh password
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          port: ${{ secrets.PORT }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSH_KEY }}
+          target: ${{ secrets.SSH_DIR }}
+          source: "assets/**,assets/**/**,assets/**/**/**,assets/**/**/**/**"
+
     - name: Checkout
       uses: actions/checkout@v3
       with:
