--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,8 +6,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  refresh-page-data:
-    name: Refresh PageData.js
+  refresh-assets:
+    name: Refresh Assets
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -22,8 +22,16 @@ jobs:
         username: ${{ secrets.USERNAME }}
         key: ${{ secrets.SSH_KEY }}
         target: ${{ secrets.SSH_DIR }}
-        source: ./assets/**
+        source: ./assets
 
+  refresh-page-data:
+    name: Refresh Staging Files
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+      with:
+       path: main
     - name: Checkout
       uses: actions/checkout@v3
       with:
