--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
         username: ${{ secrets.USERNAME }}
         key: ${{ secrets.SSH_KEY }}
         target: ${{ secrets.SSH_DIR }}
-        source: "assets/directories/open-calls/images/**"
+        source: ./assets/directories/open-calls/images/*
 
   refresh-page-data:
     name: Refresh Staging Files
