--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,15 +14,29 @@ jobs:
       uses: actions/checkout@v3
       with:
        path: main
+    - name: Get all changed markdown files
+      uses: tj-actions/changed-files@v45
+      with:
+        separator: ","
+        files: |
+          assets/**
+    - name: List all changed files
+      env:
+        ALL_CHANGED_FILES: ${{ steps.changed-files.outputs.all_changed_files }}
+      run: |
+          for file in ${ALL_CHANGED_FILES}; do
+            echo "$file was changed"
+          done
     - name: copy file via ssh password
       uses: appleboy/scp-action@master
+      continue-on-error: true
       with:
         host: ${{ secrets.HOST }}
         port: ${{ secrets.PORT }}
         username: ${{ secrets.USERNAME }}
         key: ${{ secrets.SSH_KEY }}
         target: ${{ secrets.SSH_DIR }}
-        source: ./assets/directories/open-calls/images/*
+        source: ${{ steps.changed-files.outputs.all_changed_files }}
 
   refresh-page-data:
     name: Refresh Staging Files
