--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
-    - name: Get all changed markdown files
+    - name: Get all changed files
       uses: tj-actions/changed-files@v45
       with:
         separator: ","
@@ -34,7 +34,7 @@ jobs:
         username: ${{ secrets.USERNAME }}
         key: ${{ secrets.SSH_KEY }}
         target: ${{ secrets.SSH_DIR }}
-        source: ${{ steps.changed-files.outputs.all_changed_files }}
+        source: ./assets/**
 
   refresh-page-data:
     name: Refresh Staging Files
