--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,8 @@ jobs:
       uses: actions/checkout@v3
     - name: Check assets
       run: |
-        cd assets
+         rm -rf directories
+         cp -r ./assets/directories ./directories
     - name: copy file via ssh password
       uses: appleboy/scp-action@master
       continue-on-error: true
@@ -24,7 +25,7 @@ jobs:
         username: ${{ secrets.USERNAME }}
         key: ${{ secrets.SSH_KEY }}
         target: ${{ secrets.SSH_DIR }}
-        source: ./**
+        source: directories/**
 
   refresh-page-data:
     name: Refresh Staging Files
