--- a/package.json
+++ b/package.json
@@ -70,8 +70,7 @@
   "devDependencies": {
     "eslint": "^9.6.0",
     "eslint-config-tamia": "^8.1.3",
-    "eslint-plugin-prettier": "^5.1.3",
-    "lefthook": "^1.9.0"
+    "eslint-plugin-prettier": "^5.1.3"
   },
   "keywords": []
 }
