package.json and directory-figures upload

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "evangelists": "PROCESS=people PAGE=evangelists npm start",
     "events": "PROCESS=events PAGE=speakers npm start",
     "fisab": "PROCESS=people PAGE=fisab npm start",
-    "figures": "PROCESS=figures npm start",
+    "directory-figures": "PROCESS=directory-figures npm start",
     "enablers": "PROCESS=enablers npm start",
     "ihubs": "PROCESS=iHubs npm start",
     "iHubs": "PROCESS=iHubs npm start",
