Add Generated Content

--- a/package.json
+++ b/package.json
@@ -32,19 +32,23 @@
     "ihubs": "PROCESS=iHubs npm start",
     "iHubs": "PROCESS=iHubs npm start",
     "impact-stories": "PROCESS=impact-stories npm start",
+    "jobs": "PROCESS=careers npm start",
     "main-figures": "PROCESS=main-figures npm start",
     "marketing": "PROCESS=marketing npm start",
+    "marketplace": "PROCESS=products npm start",
+    "marketplace+": "GEN_CONTENT=true PROCESS=products npm start",
     "open-calls": "PROCESS=open-calls npm start",
     "organisations": "PROCESS=organisations npm start",
     "msc": "PROCESS=people PAGE=msc npm start",
     "research-development": "PROCESS=research-development npm start",
     "showcase": "PROCESS=products npm start",
+    "showcase+": "GEN_CONTENT=true PROCESS=products npm start",
     "speakers": "PROCESS=people PAGE=speakers npm start",
     "sponsors": "PROCESS=sponsors npm start",
-    "team": "PROCESS=people PAGE=team npm start npm run",
+    "team": "PROCESS=people PAGE=team npm start",
+    "tools": "PROCESS=marketing npm start",
     "tsc": "PROCESS=people PAGE=tsc npm start",
     "webinars": "PROCESS=webinars npm start",
-    "marketplace": "PROCESS=products npm start",
     "postinstall": "PROCESS=postinstall npm start"
   },
   "dependencies": {
