--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "open-calls": "PROCESS=open-calls npm start",
     "organisations": "PROCESS=organisations npm start",
     "msc": "PROCESS=people PAGE=msc npm start",
+    "press": "PROCESS=press PAGE=press npm start",
     "research-development": "PROCESS=research-development npm start",
     "showcase": "PROCESS=products npm start",
     "showcase+": "GEN_CONTENT=true PROCESS=products npm start",
