Remove Profile Picture

--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "evangelists": "PROCESS=people PAGE=evangelists npm start",
     "events": "PROCESS=events PAGE=speakers npm start",
     "fisab": "PROCESS=people PAGE=fisab npm start",
-    "directory-figures": "PROCESS=directory-figures npm start",
-    "people-figures": "PROCESS=people-figures npm start",
+    "directory-figures": "PROCESS=directory-figures PAGE=team npm start",
+    "people-figures": "PROCESS=people-figures PAGE=team npm start",
     "enablers": "PROCESS=enablers npm start",
     "ihubs": "PROCESS=iHubs npm start",
     "iHubs": "PROCESS=iHubs npm start",
@@ -41,7 +41,7 @@
     "organisations": "PROCESS=organisations npm start",
     "msc": "PROCESS=people PAGE=msc npm start",
     "press": "PROCESS=press PAGE=press npm start",
-    "research-development": "PROCESS=research-development  PAGE=team npm start",
+    "research-development": "PROCESS=research-development PAGE=team npm start",
     "showcase": "PROCESS=products npm start",
     "showcase+": "GEN_CONTENT=true PROCESS=products npm start",
     "speakers": "PROCESS=people PAGE=speakers npm start",
