--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
       run: |
          rm -rf directories
          cp -r ./assets/directories ./directories
-    - name: copy file via ssh password
+    - name: copy assets
       uses: appleboy/scp-action@master
       continue-on-error: true
       with:
@@ -27,6 +27,16 @@ jobs:
         key: ${{ secrets.SSH_KEY }}
         target: ${{ secrets.SSH_DIR }}
         source: directories/**
+    - name: copy summit assets
+      uses: appleboy/scp-action@master
+      continue-on-error: true
+      with:
+        host: ${{ secrets.HOST }}
+        port: ${{ secrets.PORT }}
+        username: ${{ secrets.USERNAME }}
+        key: ${{ secrets.SSH_KEY }}
+        target: ${{ secrets.SSH_DIR }}
+        source: fiware-summit/**
 
   refresh-page-data:
     name: Refresh Staging Files
