--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
       with:
         githubToken: ${{ secrets.GITHUB_TOKEN }}
         compressOnly: true
+        ignorePaths: 'directories/**'
     - name: Check assets
       continue-on-error: true
       run: |
