--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "organisations": "PROCESS=organisations npm start",
     "msc": "PROCESS=people PAGE=msc npm start",
     "press": "PROCESS=press PAGE=press npm start",
+    "reset": "git reset --hard origin/main; rm -rf node_modules; npm install; mkdir images",
     "research-development": "PROCESS=research-development PAGE=team npm start",
     "showcase": "PROCESS=products npm start",
     "showcase+": "GEN_CONTENT=true PROCESS=products npm start",
