--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,10 @@ Untitled.txt
 .DS_Store
 .eslintcache
 secrets
+/assets/directories/showcase
+/assets/directories/showcase
+*.webp
+directories/community/community.json
+directories/community/search.js
+directories/community/community.json
+directories/community/search.js
